# logistics-transport-api

./: .example.secrets.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  manage.py  pyproject.toml  requirements.txt  settings.toml
apps/driver/: admin.py  exceptions.py  models.py  serializers.py  views.py
apps/driver/migrations/: 0001_initial.py  0002_driver_shipping.py  0003_alter_driver_shipping.py  0004_remove_driver_shipping_driver_shipping.py
apps/driver/tests/unittest/: test_driver_models.py  test_driver_views.py
apps/shipping/: admin.py  exceptions.py  models.py  serializers.py  views.py
apps/shipping/migrations/: 0001_initial.py  0002_alter_shipping_destination_alter_shipping_origin.py
apps/shipping/services/: geolocation.py
apps/shipping/tests/unittest/: test_shipping_models.py  test_shipping_views.py
logistics_transport/: asgi.py  settings.py  urls.py  wsgi.py
src/services/: exceptions.py  geolocation.py
tests/unittest/apps/driver/: test_driver_views.py
tests/unittest/apps/shipping/: test_shipping_models.py  test_shipping_views.py
